objects/BPD__c.object
<CustomObject>
    <fields>
        <fullName>Acc_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Plan_Design1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Demo__c</fullName>
        <formula>Implementation_Tracking_ID__r.Account_Demo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>HYPERLINK(Implementation_Tracking_ID__r.Account_Legal_Name__r.Id, Implementation_Tracking_ID__r.Account_Legal_Name__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Implementation_Tracking_ID__r.Account_Legal_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Process_Field_Updates__c</fullName>
        <label>Approval Process Field Updates</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned to Implementer1</fullName>
                </value>
                <value>
                    <fullName>ESR Rejected</fullName>
                </value>
                <value>
                    <fullName>AM Rejected to Implementer1</fullName>
                </value>
                <value>
                    <fullName>AM Approved to Implementer1</fullName>
                </value>
                <value>
                    <fullName>Resubmission</fullName>
                </value>
                <value>
                    <fullName>AI Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_BPD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved BPD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_Implementer__c</fullName>
        <formula>Implementation_Tracking_ID__r.Assigned_Implementer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned ImplementerFormulla</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPD_Edit_Counting__c</fullName>
        <defaultValue>0</defaultValue>
        <label>BPD Edit Counting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPD_Status__c</fullName>
        <label>BPD Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initiated In Implementations Review</fullName>
                </value>
                <value>
                    <fullName>Pending Response from ESR</fullName>
                </value>
                <value>
                    <fullName>Pending Response from Sales/AM</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benefit_Plan_Design_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Plan Design Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Acct_Mgmt_Approved_BPD__c</fullName>
        <formula>Approved_BPD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Acct Mgmt Approved BPD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Design_Status__c</fullName>
        <formula>IF(ISPICKVAL(Tech_Rejected__c,&quot;AM Rejected&quot;),&apos;Re&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Design Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disabler_Enabler_Checkbox_of_PBO2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disabler/Enabler Checkbox of PBO2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EBA_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EBA Lead</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.ProfileName__c</field>
                <operation>equals</operation>
                <value>SME, SME Dual</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Plan_Design</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employer_Service_Representative_ESR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>US 21398</description>
        <label>Employer Service Representative (ESR)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Plan_Design3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EnablerCheckbox_for_PB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EnablerCheckbox for PB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>HYPERLINK(Implementation_Tracking_ID__r.Group_Number__c ,Implementation_Tracking_ID__r.Group_Number__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Record_ID__c</fullName>
        <formula>HYPERLINK(Implementation_Tracking_ID__r.Implementation_Record_ID__r.Id,   Implementation_Tracking_ID__r.Implementation_Record_ID__r.OrderNumber )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Case Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Tracking_ID__c</fullName>
        <label>Implementation Tracking ID</label>
        <referenceTo>Implementation_Tracking__c</referenceTo>
        <relationshipLabel>Benefit Plan Design</relationshipLabel>
        <relationshipName>Benefit_Plan_Design</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Implementer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Implementer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Plan_Design2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initial_Date_EBA_Sent_BPD_To_Imp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Initial Date EBA Sent BPD To Imp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Date_ESR_Sent_BPD_To_Acct_Mgmt__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Initial Date ESR Sent BPD To Acct Mgmt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Date_Imp_Received_BPD_From_EBA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Initial Date Imp Received BPD From EBA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Date_Imp_Sent_BPD_To_Acct_Mgmt__c</fullName>
        <formula>Pending_BPD__c</formula>
        <label>Initial Date Imp Sent BPD To ESR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Client_Approval_Needed__c</fullName>
        <label>Is Client Approval Needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Logic_to_Send_One_Not_to_AI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Logic to Send One Not to AI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Of_Times_BPD_Was_Updated__c</fullName>
        <formula>BPD_Edit_Counting__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Of Times BPD Was Updated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending_BPD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending BPD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Re_submission_wording_for_template__c</fullName>
        <formula>IF( Rejected_by_AM__c , 
&quot;(Resubmitted)&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Re submission wording for template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected_by_AM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected by AM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resubmitting_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resubmitting for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skip_Implementer_Approval_BPD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Implementer Approval_BPD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Impl_Reject_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Impl Reject Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Rejected__c</fullName>
        <label>Tech Rejected</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Implementer Rejected</fullName>
                </value>
                <value>
                    <fullName>AM Rejected</fullName>
                </value>
                <value>
                    <fullName>ESR Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_340, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340)) &amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Url</label>
        <type>Text</type>
    </fields>
    <label>Benefit Plan Design</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BPD-{000000}</displayFormat>
        <label>BPD Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefit Plan Design</pluralLabel>
    <recordTypes>
        <fullName>Master_Duplicate</fullName>
        <active>true</active>
        <label>Master Duplicate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Read_Only</fullName>
        <active>true</active>
        <label>Read Only</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>VR01_BPD01_Is_Client_Approval_Needed</fullName>
        <active>true</active>
        <description>The field &quot;Is Client Approval Needed&quot; is not editable by SMEs</description>
        <errorConditionFormula>AND(!$User.BypassValidation__c,  $User.Id &lt;&gt;  Implementer__r.Id 
 ,ISCHANGED(Is_Client_Approval_Needed__c)=true)</errorConditionFormula>
        <errorMessage>The field &quot;Is Client Approval Needed&quot; cannot be edited</errorMessage>
    </validationRules>
</CustomObject>